	on tourneyNewState_tourneyResumeAndDeal.
	(BreakTestCase.test04_tourneyNewState_tourneyStart_nowait): Wrote test.
	(BreakTestCase.test05_tourneyNewState_tourneyStart_withWait):
	Wrote test.
	(BreakTestCase.tourneyFinish): Wrote method.
	(BreakTestCase.test06_tourneyFinish_nowait): Wrote test.
	(BreakTestCase.test07_tourneyFinish_withWait): Wrote test.

2008-08-28  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerservice.py.in
	(BreakTestCase.test01_tourneyNewState_noCallbacksNeeded): split
	test_tourneyNewState().

2008-08-27  Bradley M. Kuhn  <bkuhn@ebb.org>

	* pokernetwork/pokerservice.py (PokerService.tourneyNewState):
	Added check and delay for extra_wait_tourney_break
	(PokerService.tourneyResumeAndDeal): Wrote method.
	(PokerService.tourneyDestroyGame): delay actual table destruction
	based on extra_wait_tourney_finish
	(PokerService.tourneyDestroyGameActual): Created method.

2008-08-26  Loic Dachary <loic@dachary.org>

 	* Release 1.7.0

	* tests/test-proxyfilter.py.in: test06_tableSeat_auth to verify
	  authentication survives proxy requests
	* pokernetwork/proxyfilter.py: copy the args from the URL in the
	  proxy request
	* pokernetwork/pokersite.py: MemcacheMockup uses a singleton hash
	  to share among multiple instances in the same process (typical in
	  test environments)

2008-08-26  Bradley M. Kuhn  <bkuhn@ebb.org>

	* pokernetwork/pokeravatar.py (PokerAvatar.sendPacket): Handle
	locale switching, both for avatar and pokergame, before sending a
	packet.
	(PokerAvatar.handlePacketLogic): Added handler for
	PacketPokerSetLocale().

2008-08-25  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in
	(PokerAvatarTestCase.test71_setLocaleAlwaysValid): Wrote test.
	(PokerAvatarTestCase.test72_setLocaleAlwaysFail): Wrote test.

	* pokernetwork/pokeravatar.py (PokerAvatar.handlePacketLogic):
	Added check for PACKET_POKER_SET_LOCALE.
	(PokerAvatar.setLocale): Wrote method.
	(PokerAvatar.__init__): Added initialization for localeFunc
